syntax = "proto3";

message MemberRequest {
  int64 id = 1;
}

message MemberReply {
  string name = 1;
  string email = 2;
}

message OrderReply {
  string number = 1;
}

service MemberService {
  rpc LoadMember ( stream MemberRequest ) returns ( stream MemberReply ) {}
}

service OrderService {
  rpc LoadOrder ( stream MemberRequest ) returns ( stream OrderReply ) {}
}
